--- a/receive/templates/receive/pages/info_receive.html
+++ b/receive/templates/receive/pages/info_receive.html
@@ -1,6 +1,8 @@
 {% include "receive/partials/head.html" %}
 <body>
-  {% include "receive/partials/header.html" %}
+  <header>
+    {% include "global/partials/header.html" %}
+  </header>
   <main>
     <div class="sub_menu">
       <a href="receive/home"><button>Painel</button></a>
