--- a/receive/templates/receive/pages/receive.html
+++ b/receive/templates/receive/pages/receive.html
@@ -2,7 +2,9 @@
 {% include "receive/partials/head.html" %}
 <body>
   
-  {% include "global/partials/header.html" %}
+  <header>
+    {% include "global/partials/header.html" %}
+  </header>
   <main>
     <div class="content">
       <div class="sub_menu">
