--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -86,8 +86,8 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/stock/new_product/">Cadastrar Produto</a>
-              <a class="dropdown-item" href="#">Consultar</a>
-             
+              <a class="dropdown-item" href="/stock/product/">Consultar</a>
+              
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -97,6 +97,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/sale/new-sale">Efetuar Venda</a>
               <a class="dropdown-item" href="/sales/searchsales">Consultar</a>
+              <a class="dropdown-item" href="/sales/">Painel</a>
               
             </div>
           </li>
