--- a/receive/templates/receive/pages/clientes_pendentes.html
+++ b/receive/templates/receive/pages/clientes_pendentes.html
@@ -4,44 +4,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clientes com Pagamento Pendente</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #007bff;
+            padding: 1em;
+            color: white;
+            text-align: center;
+            z-index: 1000;
+        }
+
+        .content {
+            padding-top: 60px;
+            width: 85vw;
+            min-height: 90vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: auto;
+            padding: 1em;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+            text-align: center;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 1em;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        th, td {
+            padding: 0.5em;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f1f1f1;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+
+        td button {
+            padding: 0.5em 1em;
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        td button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    {% include "global/partials/header.html" %}
-    <h1>Clientes com Pagamento Pendente</h1>
+    <header>
+        {% include "global/partials/header.html" %}
+      </header>
+    
+    <div class="content">
+        <h1>Clientes com Pagamento Pendente</h1>
 
-    <table border="1">
-        <thead>
-            <tr>
-                <th>ID Cliente</th>
-                <th>Nome Cliente</th>
-                <th>CPF/CNPJ</th>
-                <th>Valor da Dívida</th>
-                <th>Data da Venda</th>
-                <th>Tipo de Pagamento</th>
-                <th>Status</th>
-                <th>Ação</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for pagamento in pagamentos_pendentes %}
-            <tr>
-                <td>{{ pagamento.cliente.id }}</td>
-                <td>{{ pagamento.cliente.nome }}</td>
-                <td>{{ pagamento.cpf_cnpj }}</td>
-                <td>{{ pagamento.valor }}</td>
-                <td>{{ pagamento.data_venda }}</td>
-                <td>{{ pagamento.tipo_pagamento }}</td>
-                <td>{{ pagamento.status }}</td>
-                <td>
-                    <!-- Botão para redirecionar para a página de recebimento de pagamento -->
-                    <a href="{% url 'receber_pagamento' pagamento.id %}">
-                        <button>Receber Pagamento</button>
-                    </a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+        <table>
+            <thead>
+                <tr>
+                    <th>ID Cliente</th>
+                    <th>Nome Cliente</th>
+                    <th>CPF/CNPJ</th>
+                    <th>Valor da Dívida</th>
+                    <th>Data da Venda</th>
+                    <th>Tipo de Pagamento</th>
+                    <th>Status</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for pagamento in pagamentos_pendentes %}
+                <tr>
+                    <td>{{ pagamento.cliente.id }}</td>
+                    <td>{{ pagamento.cliente.nome }}</td>
+                    <td>{{ pagamento.cpf_cnpj }}</td>
+                    <td>{{ pagamento.valor }}</td>
+                    <td>{{ pagamento.data_venda }}</td>
+                    <td>{{ pagamento.tipo_pagamento }}</td>
+                    <td>{{ pagamento.status }}</td>
+                    <td>
+                        <a href="{% url 'receber_pagamento' pagamento.id %}">
+                            <button>Receber Pagamento</button>
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
